# snap_crm

./: .gitignore  .gitmodules  .hgignore  .hgtags  Bugs.txt  Build_guide_for_dummies.txt  CMakeLists.txt  README.md  TODO list.txt  amountToWords.cpp  amountToWords.h  amountToWordsRu.cpp  amountToWordsRu.h  applog.cpp  applog.h  appver-update.bat  appver.h  bottoolbarwidget.cpp  bottoolbarwidget.h  bottoolbarwidget.ui  chooseofficewindow.cpp  chooseofficewindow.h  chooseofficewindow.ui  clients4test.cpp  clients4test.h  com_sql_queries.h  copy_libs.bat  dbconnection.cpp  dbconnection.h  getOutDialog.cpp  getOutDialog.h  getOutDialog.ui  global.cpp  global.h  global_ns.h  lineedit.cpp  lineedit.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  (+89 more)
TODO/: list.txt  Блокировка карты ремонта и механизм Запрос-Ответ.txt  Концепция механизма обработки сбоя соединения с сервером.txt  Новая модель SSaleTableModel.txt
amountToWords/: amountToWords.cpp  amountToWords.h  amountToWords.h.example  amountToWordsBg.h  amountToWordsBy.h  amountToWordsCn.h  amountToWordsIl.h  amountToWordsKz.h  amountToWordsMd.h  amountToWordsPl.h  amountToWordsRu.h  amountToWordsUa.h  amountToWordsUs.h  amountToWordsUz.h
doc/: cartridge_schema.graphml
help/: Purchase-manager.md  help.qrc
include/: BotToolbarWidget  EscPosPrinter  FieldFactory  FlashPopup  LoginWindow  ProjectGlobals  QSerializer  QToolTipper  SAbstractItemModel  SAmountToWords  SAppLog  SApplication  SBOQDelegates  SBOQStoreView  SBOQWorkshopView  SBalanceLogRecordModel  SBillOfQuantities  SCartridgeCard  SCartridgeCardModel  SCartridgeForm  SCartridgeMaterialModel  SCartridgeMaterialsDelegates  SCartridgeMaterialsModel  SCartridgeRepairModel  SCashRegisterModel  SCheckComboBox  SCheckComboBoxDataModel  SClient4Test  SClientInputForm  SClientInputFormBase  SClientMatch  SClientMatchModel  SClientSelectForm  SClientSummaryPage  SClientsDelegates  SClientsView  SComSettings  SComSettingsTypes  SComTextEdit  SComboBox  (+158 more)
installer/: TODO.txt  how_to_incremental_update.txt  installer-online-only.7z  make-standalone-installer.bat  make_installer.bat  make_repo_update.bat  rare-packages-update-debug.bat  rare-packages-update.bat  regular-packages-update.bat  repogen.txt  strategy.xlsx
lang/: snap_ru_RU.ts
models/: propstruct.cpp  propstruct.h  repairstablemodel.h  repairtablefiltermenu.cpp  repairtablefiltermenu.h  repairtablefiltermenu.ui  sabstractitemmodel.cpp  sabstractitemmodel.h  saletablemodel.cpp  saletablemodel.h  scartridgecardmodel.cpp  scartridgecardmodel.h  scartridgematerialmodel.cpp  scartridgematerialmodel.h  scartridgematerialsmodel.cpp  scartridgematerialsmodel.h  scartridgerepairmodel.cpp  scartridgerepairmodel.h  scashregistermodel.cpp  scashregistermodel.h  sclientmodel.cpp  sclientmodel.h  scommentmodel.cpp  scommentmodel.h  scommentsmodel.cpp  scommentsmodel.h  scompanymodel.cpp  scompanymodel.h  scomrecord.cpp  scomrecord.h  scomsettings.cpp  scomsettings.h  scomsettingstypes.h  (+111 more)
(+524 files in other folders)
